--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-api",
+  "name": "ticket_system",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -20,5 +20,8 @@
     "mongoose": "^8.5.2",
     "nodemailer": "^6.9.14",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
